# osparc-lab

./: .gitignore  .pylintrc  .travis.yml  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  mkdocs.yml  package.json
demos/: CMakeLists.txt  Front-End technologies comparison.md  README.md  ServiceRegistry.json
demos/CppCiTests/: CMakeLists.txt  build.py  setup.py
demos/CppCiTests/CLangTest/: CMakeLists.txt
demos/backend-workbench/: Makefile  docker-compose-swarm.yml  docker-compose.dev.yml  docker-compose.yml
demos/cpp-ci/: CMakeLists.txt  README.md  build.py  deploy.dockerfile  deploy.dockerignore  setup.py
demos/cpp-ci/Main/: CMakeLists.txt  Main.cpp
demos/cpp-ci/Utils/: CMakeLists.txt  PrintHelloWorld.cpp  Test.cpp  Test.h
demos/director/: README.md  docker-compose.yml  makefile
demos/docker-node/: Makefile  README.md  package.json
demos/frontend-data/: README.md  ServiceRegistry.json  SingleCell_S1.json  SingleCell_S2.json
demos/frontend-qooxdoo/: .gitignore  Makefile  README.md  Review.md
demos/frontend-react/: Makefile  README.md  Review.md
demos/frontend-vue/: Makefile  README.md  Review.md  package.json
demos/frontend-wt/: .dockerignore  .gitignore  CMakeLists.txt  CommonSettings.props  Dockerfile  Makefile  README.md  WTSparcSandbox.sln
demos/frontend-wt/BuildEnv/: Build.bat  BuildEnv.vcxproj  BuildEnv.vcxproj.filters  CMakeLists.txt
demos/frontend-wt/CMake/: CommonMacros.cmake  ThirdPartyBoost.cmake  ThirdPartyWt.cmake
demos/frontend-wt/WTSparcSandbox/: .gitignore  CMakeLists.txt  WTSparcSandbox.cpp  WTSparcSandbox.vcxproj  WTSparcSandbox.vcxproj.filters  packages.config
demos/frontend-wt/WTSparcSandbox/login/: QRAuth.cpp
demos/frontend-wt/WTSparcSandbox/sessionview/: NavigationBar.cpp  NavigationBar.h  SceneWidget.cpp  SceneWidget.h  SessionWidget.cpp  SessionWidget.h
demos/frontend-wt/WTSparcSandbox/threeview/: ThreeWidget.cpp  ThreeWidget.h
demos/pipelines/: Makefile  README.md  makefile
demos/qooxdoo-plotly/: Makefile  README.md
demos/sidecar/: README.md
demos/wasm/: README.md
demos/workflow/: Makefile  README.md  docker-compose-dag-swarm.yml  docker-compose-swarm.yml  docker-compose.qx.yml  docker-compose.yml  makefile  swarm-node-vbox-setup.sh
docker-node/: Dockerfile  README.md  server.js
docker-react/react-app/: Dockerfile
docs/: README.md  coding-guidelines.md  docker-cheatsheet.md  getting-started.md  git-cheatsheet.md
docs/d1.1-report/: conclusions.md  index.md  intro.md
docs/d1.1-techreview/: conclusion.md  index.md  methodology.md  objectives.md  results.md
front-end_prototypes/react/: .gitignore  Makefile  README.md  package.json
front-end_prototypes/services/: ServiceManager.js
front-end_prototypes/vue/: index.html  package.json
front-end_prototypes/vue-prototype/: readme-om.txt
templates/: README.md
templates/boilerplate/: .env  .env-dev  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
templates/build-docker-files/: README.md  build-cpp-env.dockerfile
templates/demo-tmpl/: Makefile  README.md  review.md
tools/: AnalyzeCodeCoverage.py  CMakeLists.txt  TestDemosFileStructure.py
tools/ci-checks/: CMakeLists.txt  CheckPep8.sh  TestDemosFileStructure.py  analyze_code_coverage.py  test_demos_file_structure.py
tools/doc-generator/: Dockerfile  README.md  (+2 more)
(+305 files in other folders)
