PROJECT( CppCiTest )

CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

ENABLE_TESTING()

SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/_bin )

SET( GCC_COVERAGE_COMPILE_FLAGS "-fprofile-instr-generate -fcoverage-mapping" )

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
SET( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}" )

ADD_SUBDIRECTORY( Utils )
ADD_SUBDIRECTORY( CLangTest )
