PROJECT( CppCiTest )

CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

ENABLE_TESTING()

SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/_bin )

IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    SET( USING_CLANG ON )
    SET( GCC_COVERAGE_COMPILE_FLAGS "-fprofile-instr-generate -fcoverage-mapping" )
ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    SET( USING_GCC ON )
ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
    SET( USING_INTEL_CPP ON )
ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    SET( USING_MSVC ON )
ENDIF()

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
SET( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}" )

ADD_SUBDIRECTORY( Utils )
ADD_SUBDIRECTORY( Main )


# setup deploy docker files
FILE( MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} )
CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/deploy.dockerfile ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Dockerfile COPYONLY )
CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/deploy.dockerignore ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/.dockerignore COPYONLY )
