SET( MY_TARGET_NAME CppCiTest )

SET( SOURCE_FILES 
    Main.cpp
)

SET( LINK_LIBRARIES
    Utils
)

ADD_EXECUTABLE( ${MY_TARGET_NAME} ${SOURCE_FILES} )
TARGET_LINK_LIBRARIES( ${MY_TARGET_NAME} ${LINK_LIBRARIES} )


IF (USING_CLANG)
    ADD_TEST( NAME CodeCoverage${MY_TARGET_NAME}
        WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
        COMMAND python3 ${CMAKE_SOURCE_DIR}/../../tools/ci-checks/analyze_code_coverage.py ${MY_TARGET_NAME} 
    )
ENDIF()
